[tool.poetry]
license = "MIT"
name = "mqtt_logger"
version = "0.1.4"
description = "Python based MQTT to SQLite3 logger"
authors = ["Blake Haydon <blake.a.haydon@gmail.com>"]
readme = "README.md"
keywords = ["MQTT", "SQLite3"]
homepage = "https://github.com/Blake-Haydon/mqtt-logger"

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.6.1"
rich = "^12.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
