[tool.poetry]
license = "MIT"
name = "mqtt_logger"
version = "0.3.6"
description = "Python based MQTT to SQLite3 logger"
authors = ["Blake Haydon <blake.a.haydon@gmail.com>"]
readme = "README.md"
keywords = ["MQTT", "SQLite3"]
homepage = "https://github.com/Blake-Haydon/mqtt-logger"

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.6.1"
rich = "^12.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
